# cpp-blocks

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
src/: context.hpp  figure.cpp  figure.hpp  figure_variant.cpp  figure_variant.hpp  game.cpp  game.hpp  main.cpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp
